# Conteneurisation-et-D-ploiement

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
artifacts/: autoencoder.keras  encoder.keras  features.pkl  metrics.pkl  scaler.pkl  threshold.pkl
datas/: test.csv  test0.csv
dev/: Dockerfile  app.py  front.py  predictor.py  start.sh
notebooks/: notebook_test.ipynb
src/: Dockerfile  __init__py  train.py
src/models/: gru_ae.py  lstm_ae.py
