[tool.poetry]
name = "conteneurisation-et-d-ploiement"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = true
packages = [
    {include="src"},
    {include="dev"}
]

[tool.poetry.dependencies]
python = "^3.12"
joblib = "^1.5.3"
ipykernel = "^7.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.visu]
optional = true


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"
numpy = "^2.4.2"
scikit-learn = "^1.8.0"
tensorflow = "^2.20.0"
keras = "^3.13.2"
pandas = ">=1.1.0,<3"


[tool.poetry.group.visu.dependencies]
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
plotly = "^6.5.2"
streamlit = "^1.54.0"
ipykernel = "^7.2.0"
fastapi = "^0.129.0"
uvicorn = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
